Fixes image sizes, adjusts spacing, and changes btn sizes for phone portrait view.

--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -426,68 +426,83 @@
 	and (orientation: portrait) {
     /* ~~~~~~~~~~~~~~ General ~~~~~~~~~~~~~~ */
     body {
-        padding: 1em;
+        padding: .5em;
     }
 
     .container {
         max-width: 960px;
     }
 
+    #background_left,
+    #background_right {
+        background-size: 500%;
+    }
+
     /* Fonts */
-    /* h1 {
-        font-size: 2.25rem;
+    h1 {
+        font-size: 2rem;
+        margin: 0;
     }
 
     h2 {
-        font-size: 1.75rem;
+        font-size: 1.5rem;
+        margin: 0;
+    }
+
+    h4 {
+        margin: 0;
     }
 
     small {
         font-size: .75em;
-    } */
+    }
 
     /* Card Imgs */
     #playing_field img {
-        min-width: 170px;
+        width: 100%;
     }
 
     /* Btns */
-    .btn-lg {
-        padding: .35rem .75rem;
-        font-size: 1.10rem;
-    }
-
     #start_game_btn {
-        margin: 30px;
+        margin: 25px;
     }
 
-    #higher_btn,
-    #lower_btn {
-        padding: .35rem .75rem;
+    /* .btn-lg {
+        padding: .25rem .75rem;
+    } */
+
+    #higher_btn, #lower_btn {
+        padding: .35rem .85rem;
     }
 
     /* ~~~~~~~~~~~~~~ Sections ~~~~~~~~~~~~~~ */
     /* Top Btns */
     #dark_mode_container {
-        padding-bottom: 15px;
+        padding-bottom: 5px;
     }
 
     /* Game Area */
     #game_page {
-        padding-top: 15px;
+        padding-top: 10px;
     }
 
-    /* #playing_field {
-        min-height: 220px;
-    } */
+    #playing_field {
+        min-height: 185px;
+    }
 
     /* Text To Players */
     #text_to_player {
-        min-height: 85px;
+        min-height: 70px;
+    }
+
+    /* Play Again */
+    #play_again_button_container {
+        margin-top: 0;
+        min-height: 40px;
     }
 
     /* High Score */
-    #high_score_container {
-        padding: 15px;
-    }
+    /* #high_score_container {
+        padding: 5px;
+    } */
 }
